<resources>
    <string name="app_name">SmartCitizen</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_main">SmartCitizen</string>

    <string name="phone_sign_in">Phone Sign In</string>

    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>

    <!-- Sign In -->
    <string name="progress_dialog_loading">Loading…</string>
    <string name="progress_dialog_authenticating_with_firebase">Authenticating with Firebase…</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="meter_history">Meter History</string>
    <string name="communicate">Communicate</string>
    <string name="properties">Properties</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="full_names">Full Names</string>
    <string name="full_names_image">Full Names Image</string>
    <string name="email_image">Email Image</string>
    <string name="email_address">Email Address</string>
    <string name="contact_number">Contact Number</string>
    <string name="profile_update">profile update</string>

    <!-- Profile -->
    <string name="full_name">Full name is required!</string>
    <string name="email_address_required">Email Address is required!</string>
    <string name="error_invalid_email">%s email address is invalid</string>
    <string name="hello_there">This was revealed through a couple of emails sent by Gary Naidoo, a Gupta family spokesperson who works at TNA Media, to Atul Gupta in November 2013. The emails are part of a tranche of leaked Gupta emails which have emerged in the last few weeks.
    Its head Johann van Loggerenberg and former SARS spokesperson Adrian Lackay in their book Rogue pointed at the tobacco industry, who under a project named Honey Badger, they were looking into.
    \n\n But, the unit was also said at the time to have been investigating more politically sensitive cases, which could also have led to them being targeted.</string>
    <string name="khuthadzo_gundula">Khuthadzo Gundula</string>
    <string name="smart_citizen_image">Smart Citizen Image</string>

</resources>
