<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="za.co.gundula.app.smartcitizen.ui.user.ProfileActivityFragment"
    tools:showIn="@layout/activity_profile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/profile_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_margin="10dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/profile_picture"
                    app:srcCompat="@drawable/ic_menu_account" />

                <ProgressBar
                    android:id="@+id/process_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone" />


                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/change_profile_pic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fabSize="normal"
                    app:srcCompat="@drawable/ic_menu_camera"
                    android:layout_alignParentBottom="true"
                    android:layout_alignEnd="@+id/avatar" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/divider"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/activity_vertical_margin"
                android:paddingStart="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <ImageView
                    android:id="@+id/account_image"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_person"
                    android:contentDescription="@string/full_names_image" />

                <EditText
                    android:id="@+id/display_name"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/account_image"
                    android:hint="@string/full_names"
                    android:textColorHint="@color/accent"
                    android:theme="@style/TextAppearance.AppCompat.Medium" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/activity_vertical_margin"
                android:paddingStart="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <ImageView
                    android:id="@+id/email_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_email"
                    android:contentDescription="@string/email_image" />

                <EditText
                    android:id="@+id/email_address"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/email_image"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@.1234567890"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/accent"

                    android:theme="@style/TextAppearance.AppCompat.Medium" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/activity_vertical_margin"
                android:paddingStart="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <ImageView
                    android:id="@+id/phone_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_phone"
                    android:contentDescription="@string/full_names_image" />

                <EditText
                    android:id="@+id/phone_number"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/phone_image"
                    android:hint="@string/contact_number"
                    android:inputType="phone"
                    android:textColorHint="@color/accent"
                    android:theme="@style/TextAppearance.AppCompat.Medium" />

            </RelativeLayout>


            <Button
                android:id="@+id/profile_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginTop="10dp"
                android:background="@color/accent"
                android:text="@string/profile_update"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
